# Persistent-Context-Aware-Gemini-Chat-CLI

./: .gitignore  CMakeLists.txt  DOCUMENTATION_INDEX.md  PROJECT_REPORT.md  README.md
documentation/: COMPLIANCE_CHECKLIST.md  PROJECT_STATUS.md  REPORT_COMPLETION_SUMMARY.md  REQUIREMENTS_VERIFICATION.md
include/: CLIHandler.h  Conversation.h  EnvHandler.h  GeminiClient.h
src/: CLIHandler.cpp  Conversation.cpp  Envhandler.cpp  GeminiClient.cpp  conversation.cpp  main.cpp
